--- a/styles/style.css
+++ b/styles/style.css
@@ -31,9 +31,10 @@
 .nav__links {
   margin: 8px 0 0;
   display: flex;
-  list-style: none;
+  list-style-type: none;
   column-gap: 20px;
   line-height: 0;
+  padding: 0;
 }
 
 .nav__link {
@@ -94,6 +95,9 @@
   background-image: url("../images/staff_picks_background.jpg");
   padding: 100px 0 140px;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .staff__title {
@@ -107,9 +111,11 @@
 
 .staff__subtitle {
   max-width: 760px;
-  margin: 0 auto;
+  margin: 0;
   text-align: center;
   color: #ffffff;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .staff__cards {
@@ -120,7 +126,7 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 40px;
-  margin-top: 60px;
+  margin-top: 68px;
   list-style-type: none;
   padding-left: 0;
 }
