--- a/styles/style.css
+++ b/styles/style.css
@@ -172,7 +172,7 @@
 .events {
   padding: 100px 0 120px 80px;
   display: flex;
-  align-items: flex-end;
+  align-items: start;
   justify-content: space-between;
   box-sizing: border-box;
   background-color: #f2f2f2;
@@ -256,7 +256,7 @@
   left: 319px;
 }
 
-.person_name_Burbidge {
+.person_name_burbidge {
   top: 96px;
   right: 125px;
 }
