--- a/styles/style.css
+++ b/styles/style.css
@@ -312,6 +312,7 @@
   text-align: center;
   font-size: 44px;
   line-height: 52px;
+  font-weight: 500;
 }
 
 .membership__steps {
@@ -320,11 +321,11 @@
   margin: 100px 0 0;
   display: flex;
   justify-content: center;
+  column-gap: 40px;
 }
 
 .step {
-  width: 220px;
-  padding: 40px;
+  flex-basis: 220px;
 }
 
 .step__title {
@@ -346,13 +347,13 @@
 
 .footer {
   box-sizing: border-box;
-  background-color: #000000;
+  background-color: #1f1f1f;
   padding: 60px 80px;
+  color: #ffffff;
 }
 
 .footer__columns {
   display: flex;
-  color: rgb(255, 255, 255);
 }
 
 .footer__column_content_hours {
@@ -360,7 +361,7 @@
 }
 
 .footer__column_content_social {
-  padding-left: 80px;
+  margin-left: 80px;
 }
 
 .footer__logo {
@@ -388,12 +389,14 @@
 .footer__column-link {
   color: white;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
 }
 
 .footer__social-icon {
   width: 16px;
   height: 16px;
-  margin-right: 10px;
 }
 
 .footer__copyright {
